<resources>
    <string name="app_name">LibroAbierto</string>

    <!-- Nav Menu -->
    <string name="opcion_publicaciones_title">Publicaciones</string>
    <string name="opcion_publicar_libro_title">Publicar Libro</string>
    <string name="opcion_ofertas_title">Ver Ofertas</string>
    <string name="opcion_profile_title">Mi Cuenta</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Seccion Login -->
    <string name="mensaje_login">LibroAbierto requiere acceder a tu informacion de usuario para poder desplegar sus funcionalidades:</string>
    <string name="google_sign_response_message" formatted="false">¡Bienvenido: %s!</string>

    <!-- Sección Publicaciones -->
    <string name="publicacion_emisor">Publicado por:</string>
    <string name="fecha_publicacion">Fecha de Publicación:</string>

    <!-- Sección Publicar Libro -->
    <string name="btn_tomar_foto">Tomar Foto</string>
    <string name="btn_seleccionar_foto">Seleccionar Foto</string>

    <string name="label_nombre">Nombre:</string>
    <string name="label_autor">Autor:</string>
    <string name="label_editorial">Editorial:</string>
    <string name="label_descripcion">Descripción:</string>
    <string name="label_estado">Estado:</string>
    <string name="label_paginas">N°Páginas:</string>

    <string name="hint_nombre">Nombre del Libro</string>
    <string name="hint_autor">Nombre del Autor del Libro</string>
    <string name="hint_editorial">Editorial del Libro</string>
    <string name="hint_largo">Cantidad de Páginas del Libro</string>
    <string name="hint_descripcion">Descripción del Libro</string>

    <string name="estado_on">Nuevo</string>
    <string name="estado_off">Usado</string>

    <string name="btn_publicar_libro">Publicar Libro</string>

    <!-- Sección Ofertas de Libros -->
    <string name="no_offer_label">No Hay Ofertas Disponibles</string>

    <!--  Sección Ofertar Libro -->
    <string name="ofertar_libro_title">Ofertar Libro</string>
    <string name="btn_ofertar_libro">Ofertar Libro</string>

    <!-- Sección Detalle Libro -->
    <string name="autor_label">Autor</string>
    <string name="editorial_label">Editorial</string>
    <string name="largo_label">N°Páginas</string>
    <string name="publicado_label">Publicado por</string>
    <string name="fecha_public_label">Fecha de Publicación</string>
    <string name="estado_label">Estado</string>
    <string name="description_label">Descripción</string>

    <!-- Sección Mi Cuenta -->
    <string name="nombre_placeholder">Usuario</string>
    <string name="telefono_placeholder">Telefono</string>
    <string name="email_placeholder">Correo</string>

    <string name="btn_editarDatosUsuario">Editar Datos</string>
</resources>
