<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/placeholder_img"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_gravity="center_horizontal">

            <Button
                android:id="@+id/tomarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_tomar_foto"/>

            <Button
                android:id="@+id/seleccionarFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_seleccionar_foto"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/libro_nombre"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_nombre"/>

            <EditText
                android:id="@+id/libro_autor"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_autor"/>

            <EditText
                android:id="@+id/libro_editorial"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_editorial"/>

            <EditText
                android:id="@+id/libro_largo"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:hint="@string/hint_largo"/>
        </LinearLayout>
    </LinearLayout>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>