<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="76dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:id="@+id/previewImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/placeholder_img"
                    android:scaleType="fitXY"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center_horizontal">

                    <Button
                        android:id="@+id/tomarFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_tomar_foto"/>

                    <Button
                        android:id="@+id/seleccionarFoto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_seleccionar_foto"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:gravity="center_horizontal">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:id="@+id/publicar_libro_label_nombre"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_nombre"/>

                        <EditText
                            android:id="@+id/libro_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="textCapWords"
                            android:hint="@string/hint_nombre"
                            android:textDirection="firstStrong"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:layout_toRightOf="@id/publicar_libro_label_nombre"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:id="@+id/publicar_libro_label_autor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_autor"/>

                        <EditText
                            android:id="@+id/libro_autor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="textCapWords"
                            android:hint="@string/hint_autor"
                            android:textDirection="firstStrong"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:layout_toRightOf="@id/publicar_libro_label_autor"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:id="@+id/publicar_libro_label_editorial"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_editorial"/>

                        <EditText
                            android:id="@+id/libro_editorial"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="textCapWords"
                            android:hint="@string/hint_editorial"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:layout_toRightOf="@id/publicar_libro_label_editorial"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_estado"/>

                        <ToggleButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textOn="Nuevo"
                            android:textOff="Usado"
                            android:id="@+id/toggleStateButton"
                            android:checked="false"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:id="@+id/publicar_libro_label_paginas"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"
                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_paginas"/>

                        <EditText
                            android:id="@+id/libro_largo"
                            android:layout_width="10dp"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:inputType="number"
                            android:hint="@string/hint_largo"
                            android:gravity="center"
                            android:layout_marginLeft="5dp"
                            android:layout_toRightOf="@id/publicar_libro_label_paginas"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp">

                        <TextView
                            android:id="@+id/publicar_libro_label_descripcion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="18sp"

                            android:layout_centerVertical="true"
                            android:layout_alignParentLeft="true"
                            android:text="@string/label_descripcion"/>

                        <EditText
                            android:id="@+id/libro_descripcion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapWords"
                            android:hint="@string/hint_descripcion"
                            android:layout_marginLeft="5dp"
                            android:gravity="center"
                            android:layout_toRightOf="@id/publicar_libro_label_descripcion"
                            android:layout_alignParentRight="true"/>
                    </RelativeLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_publicar_libro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_ofertar_libro"/>
            </LinearLayout>
        </TableLayout>
    </ScrollView>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</android.support.v4.widget.DrawerLayout>