<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="80dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/foto_perfil"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/placeholder_img"/>

            <View
                android:layout_width="@dimen/separatorLineWidth"
                android:layout_height="1.7dp"
                android:background="@color/separatorLine"
                android:layout_margin="24dp"/>

            <!-- Datos de Usuario -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:id="@+id/nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre_placeholder"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/telefono_placeholder"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email_placeholder"
                    android:gravity="center_horizontal"/>
            </LinearLayout>

            <View
                android:layout_width="@dimen/separatorLineWidth"
                android:layout_height="1.7dp"
                android:background="@color/separatorLine"
                android:layout_margin="24dp"/>

            <!-- Rating Bar -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Calificacion de Usuario"
                    android:gravity="center_horizontal"/>

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:numStars="5"
                    android:stepSize="1.0"
                    android:rating="0.0"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>
